--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@rdfjs/data-model": "^1.1.2",
     "@solid/context": "^1.1.0",
     "ldflex": "^2.9.0",
-    "solid-auth-client": "^2.4.1",
+    "@inrupt/solid-auth-fetcher": "^0.0.4",
     "uuid": "^7.0.1"
   },
   "devDependencies": {
