--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ".babelrc"
   ],
   "dependencies": {
-    "@inrupt/solid-auth-fetcher": "~0.0.6",
+    "@inrupt/solid-auth-fetcher": "0.0.7-fixdefault-windows-fetch-132393300-40.0",
     "@ldflex/comunica": "github:inrupt/LDflex-Comunica#feature/auth-upgrade",
     "@rdfjs/data-model": "^1.1.2",
     "@solid/context": "^1.1.0",
